// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssetLabelingAdd /> should add a label 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  padding: 0;
}

.emotion-2 {
  color: #b3b3b3;
}

.emotion-3 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-5 {
  height: 8px;
}

.emotion-10 {
  height: 24px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  margin: 0;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited,
.emotion-12 .noop {
  background-color: #808080;
}

.emotion-12:hover,
.emotion-12 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true],
.emotion-12 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-13 {
  padding: 8px;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  margin: 0;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #3A5DFF;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <form
    action=""
    className="emotion-1"
    method="post"
    onSubmit={[Function]}
  >
    <label
      className="emotion-2"
    >
      Model
      <div
        className="emotion-3"
      >
        <select
          className="emotion-4"
          defaultValue=""
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="621bf774-89d9-1244-9596-d6df43f1ede5"
          >
            console_face_recognition
          </option>
          <option
            value="621bf774-89d9-9596-1244-d6df43f1ede5"
          >
            console_cat_recognition
          </option>
          <option
            value="c0e83460-6a25-1238-86fa-0242ac150002"
          >
            Gundam
          </option>
          <option
            value="c0e83462-6a25-1238-86fa-0242ac150002"
          >
            Location
          </option>
        </select>
      </div>
    </label>
    <div
      className="emotion-5"
    />
    <Combobox
      hasError={false}
      label="Label"
      onChange={[Function]}
      options={[Function]}
      value=""
    />
    <div
      className="emotion-5"
    />
    <label
      className="emotion-2"
    >
      Scope
      <div
        className="emotion-3"
      >
        <select
          className="emotion-4"
          defaultValue="TRAIN"
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="TRAIN"
          >
            Train
          </option>
          <option
            value="TEST"
          >
            Test
          </option>
        </select>
      </div>
    </label>
    <div
      className="emotion-10"
    />
    <div
      className="emotion-11"
    >
      <button
        aria-disabled={true}
        className="emotion-12"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-13"
      />
      <button
        aria-disabled={true}
        className="emotion-14"
        onClick={[Function]}
        type="submit"
      >
        Save Label
      </button>
    </div>
  </form>
</div>
`;

exports[`<AssetLabelingAdd /> should render with localStorage and update a label 1`] = `
.emotion-0 {
  padding: 16px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
  padding: 0;
}

.emotion-2 {
  color: #b3b3b3;
}

.emotion-3 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-4 {
  background-color: #808080;
  border-radius: 2px;
  border: none;
  width: 100%;
  color: #ffffff;
  font-size: 15px;
  line-height: 20px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  padding-right: 32px;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgPHBhdGggZD0iTTE0LjI0MyA3LjU4NkwxMCAxMS44MjggNS43NTcgNy41ODYgNC4zNDMgOSAxMCAxNC42NTcgMTUuNjU3IDlsLTEuNDE0LTEuNDE0eiIgZmlsbD0iI2ZmZmZmZiIgLz4KPC9zdmc+');
  background-repeat: no-repeat,repeat;
  -webkit-background-position: right 8px top 50%;
  background-position: right 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
}

.emotion-5 {
  height: 8px;
}

.emotion-10 {
  height: 24px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  margin: 0;
}

.emotion-12,
.emotion-12:hover,
.emotion-12:visited,
.emotion-12 .noop {
  background-color: #808080;
}

.emotion-12:hover,
.emotion-12 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-12[aria-disabled=true],
.emotion-12 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-13 {
  padding: 8px;
}

.emotion-14 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  margin: 0;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:visited,
.emotion-14 .noop {
  background-color: #3A5DFF;
}

.emotion-14:hover,
.emotion-14 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-14[aria-disabled=true],
.emotion-14 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <form
    action=""
    className="emotion-1"
    method="post"
    onSubmit={[Function]}
  >
    <label
      className="emotion-2"
    >
      Model
      <div
        className="emotion-3"
      >
        <select
          className="emotion-4"
          defaultValue="621bf774-89d9-1244-9596-d6df43f1ede5"
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="621bf774-89d9-1244-9596-d6df43f1ede5"
          >
            console_face_recognition
          </option>
          <option
            value="621bf774-89d9-9596-1244-d6df43f1ede5"
          >
            console_cat_recognition
          </option>
          <option
            value="c0e83460-6a25-1238-86fa-0242ac150002"
          >
            Gundam
          </option>
          <option
            value="c0e83462-6a25-1238-86fa-0242ac150002"
          >
            Location
          </option>
        </select>
      </div>
    </label>
    <div
      className="emotion-5"
    />
    <Combobox
      hasError={false}
      label="Label"
      onChange={[Function]}
      options={[Function]}
      value="Existing localStorage"
    />
    <div
      className="emotion-5"
    />
    <label
      className="emotion-2"
    >
      Scope
      <div
        className="emotion-3"
      >
        <select
          className="emotion-4"
          defaultValue="TRAIN"
          disabled={false}
          onChange={[Function]}
        >
          <option
            disabled={true}
            value=""
          >
            Select an option...
          </option>
          <option
            value="TRAIN"
          >
            Train
          </option>
          <option
            value="TEST"
          >
            Test
          </option>
        </select>
      </div>
    </label>
    <div
      className="emotion-10"
    />
    <div
      className="emotion-11"
    >
      <button
        aria-disabled={true}
        className="emotion-12"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div
        className="emotion-13"
      />
      <button
        className="emotion-14"
        onClick={[Function]}
        type="submit"
      >
        Save Label
      </button>
    </div>
  </form>
</div>
`;
